--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack": "^3.3.0"
   },
   "devDependencies": {
+    "tar": ">=4.4.2",
     "dotenv-webpack": "^1.7.0",
     "extract-text-webpack-plugin": "^3.0.0"
   }
